tests/files/parser_tests/should_fail/037.cmdr
//Should not parse weird function names
x = 4();